--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -864,10 +864,9 @@ margin-top: 5.208vw;
     transform: translateY(-3px);
 }
 #mainmenu{
-    position: absolute; /* Position it absolutely */
+    position: relative; /* Position it absolutely */
     top: 50%; /* Move down 50% of the viewport height */
-    left: 50%; /* Move right 50% of the viewport width */
-    transform: translate(-50%, -50%); /* Adjust position back by half its width and height */
+    left: 0%; /* Move right 50% of the viewport width */
     text-align: center; /* Center text inside the div */
      justify-content:center;
 }
