--- a/assets/template/main.html
+++ b/assets/template/main.html
@@ -129,13 +129,9 @@
             </div>
         </nav>
         <div id="mainmenu">
-            <div class="content">
-    <div class="text-content">
-      <h1 class="tex">Starlight</h1>
-      <p class="splas">asasa</p>
-    </div>
-    <button id="ass" onclick="window.location.href='/dashboard.html'">Start now</button>
-  </div>
+            <center><div class="text">Welcome to Starlight</div></center>
+            <div id="splash">Loading...</div>
+            <center><a onclick="window.location.href='/assets/html/dashboard.html'"><button class="button">Start Now</button></a></center>
           </div>
 <script src="/assets/js/cloak.js"></script>
 <script src="/assets/uv/uv/uv.bundle.js" defer></script>
