--- a/assets/template/main.html
+++ b/assets/template/main.html
@@ -33,7 +33,28 @@
          <meta name="twitter:description" content=" Starlight is your all-in-one platform for utilities, hacks, games, and proxies, designed to enhance your online experience and unlock limitless possibilities!">
          <meta name="twitter:image" content="/assets/images/offical/starlight.png">
    
-     
+     <style>
+        .content {
+  display: grid;
+margin-right: 20px;
+  grid-template-columns: 2fr 1fr;
+          grid-template-rows: auto;
+}
+.grid1{
+    border-radius: 8px;
+    background-color: rgba(49, 49, 49, 0.045);
+    width: 60%;
+    padding: 20px;
+    height: 500px;
+}
+.grid2{
+    border-radius: 8px;
+    background-color: rgba(49, 49, 49, 0.045);
+    width: 40%;
+    padding: 20px;
+    height: 500px;
+}
+     </style>
          <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-36EM66LHER"></script>
 <script>
@@ -62,9 +83,14 @@
             </div>
         </nav>
         <div id="mainmenu">
-            <center><div class="text" style="font-size: 5em;">Welcome to Starlight</div></center>
-            <div id="splash" style="font-size: 2em;">Loading...</div><br>
-            <center><a onclick="window.location.href='/assets/html/dashboard.html'"><button class="button">Start Now</button></a></center>
+           <div class="content">
+            <div class="grid1">
+              <h1>Starlight</h1>
+            </div>
+            <div class="grid2">
+                <h1>Starlight</h1>
+            </div>
+           </div>
           </div>
 <script src="/assets/js/cloak.js"></script>
 <script src="/assets/uv/uv/uv.bundle.js" defer></script>
