--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -82,7 +82,7 @@ nav {
     justify-content: space-between; /* Space items evenly */
     align-items: center; /* Center items vertically */
     white-space: nowrap; /* Prevent wrapping */
-    overflow: scroll;    /* Hide any overflowing content */
+    width: fit-content;
     text-overflow: ellipsis; /* Add ellipsis if text overflows */
 }
 
