--- a/assets/template/appselection.html
+++ b/assets/template/appselection.html
@@ -95,6 +95,7 @@
         <a href="#soon">
         <button class="browse-games">Browse Chatroom</button></a>
         </div>
+        <br>
         <div class="gamesh111">
             <h1 class="textt">Music</h1>
             <p class="descrip">
@@ -102,17 +103,14 @@
             <a href="#soon">
             <button class="browse-games">Browse Music</button></a>
             </div>
+            <div class="gamesh111">
+                <h1 class="textt">Videos</h1>
+                <p class="descrip">Discover a diverse collection of fan-favorite games like Retro Bowl, PolyTrack, Monkey Mart, and Drive Mad! Whether you love action-packed adventures, fun simulators, or laid-back gaming experiences, this section has it all!</p>
+                <a href="/all/">
+                <button class="browse-games">Browse all Videos </button></a>
+                </div>
         </div>
-    </div> <div class="gamesh111">
-        <h1 class="textt">Videos</h1>
-        <p class="descrip">
-            Indulge in a wave of nostalgia with old gba games! Relive the excitement with timeless titles like Super Street Fighter 2 Turbo Revival, Pokemon Sapphire, Mario Kart Super Circuit, and more! If you have a passion for retro gaming, this section is a must-visit for you!</p>
-        <a href="#soon">
-        <button class="browse-games">Browse Videos</button></a>
-        </div>
-        <br>
-    </div>
-</div>
+    
     <br>
     
     </body>
