--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -53,7 +53,7 @@ body {
 text-align: center;
 font-weight: 700;
 font-size: 2em;
-color: #949494;
+color: #ffffff;
 }
 #tiger{
     text-align: center;
@@ -72,7 +72,7 @@ nav {
     transform: translateX(-50%); /* Offset the navbar by 50% of its own width */
     width: 75%; 
     padding: 20px; /* Padding for the navbar */
-    background-color: #1b1b1be4; /* Dark background */
+    background-color: #7c7c7ce4; /* Dark background */
     color: white; /* Text color */
     box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.4);
     transition: transform 0.3s, box-shadow 0.3s; /* Smooth transition for lift effect and shadow */
