--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -72,7 +72,7 @@ nav {
     transform: translateX(-50%); /* Offset the navbar by 50% of its own width */
     width: 75%; 
     padding: 20px; /* Padding for the navbar */
-    background-color: #A8A0D4 ; /* Dark background */
+    background-color: #de025e8a ; /* Dark background */
     color: white; /* Text color */
     box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.4);
     transition: transform 0.3s, box-shadow 0.3s; /* Smooth transition for lift effect and shadow */
